force-app/main/default/objects/ERP_Orders_Backlog__c/ERP_Orders_Backlog__c.object-meta.xml
<CustomObject>
    <label>ERP Orders</label>
    <nameField>
        <displayFormat>EOB-{00000000}</displayFormat>
        <label>ERP Orders Backlog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>