force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Actual_Ship_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ship_Date_Time__c</fullName>
    <label>Actual Ship Date Time</label>
    <type>Date</type>
</CustomField>