force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Amount_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_USD__c</fullName>
    <label>Amount in USD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>