force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Cancel_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Line_Status__c</fullName>
    <label>Cancel Line Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>