force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Customer_Po_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Customer_Po_Nbr__c</fullName>
    <label>Customer Po Nbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>