force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Number__c</fullName>
    <label>Master Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>