force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Order_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Id__c</fullName>
    <externalId>true</externalId>
    <label>Order Line Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>