force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Order_Status_Ind__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Ind__c</fullName>
    <externalId>true</externalId>
    <label>Order Status Ind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>