force-app/main/default/objects/ERP_Orders_Backlog__c/fields/OrderNumber_Country_code__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber_Country_code__c</fullName>
    <externalId>true</externalId>
    <label>OrderNumber Country code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>