force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Original_Promise_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Promise_Date__c</fullName>
    <description>Original Promise Date</description>
    <label>Original Promise Date</label>
    <type>Date</type>
</CustomField>