force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Product_Desc__c.field-meta.xml
<CustomField>
    <fullName>Product_Desc__c</fullName>
    <label>Product Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>