force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Promise_Date_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Promise_Date_Reason_Code__c</fullName>
    <description>Promise Date Reason Code</description>
    <label>Promise Date Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>