force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Promise_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Promise_Date_Time__c</fullName>
    <label>Promise Date Time</label>
    <type>Date</type>
</CustomField>