force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Quote_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Quote_Nbr__c</fullName>
    <label>Quote Nbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>