force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Revenue_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Trigger__c</fullName>
    <label>Revenue Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>