force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Scheduled_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival_Date_Time__c</fullName>
    <label>Scheduled Arrival Date Time</label>
    <type>Date</type>
</CustomField>