force-app/main/default/objects/ERP_Orders_Backlog__c/fields/Tran_Code__c.field-meta.xml
<CustomField>
    <fullName>Tran_Code__c</fullName>
    <label>Tran Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>